<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">integrA\nMobile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="action_back">back</string>
    <string name="action_wrong">wrong</string>
    <string name="action_right">right</string>
    <string name="action_edit">edit</string>
    <string name="setting_app">App Setting</string>
    <string name="setting_account">Account Setting</string>
    <string name="setting_offline">Offline Setting</string>
    <string name="lableOpenOrders">Open Orders</string>
    <string name="lableCompletedOrders">Completed Orders</string>
    <string name="labelOpenOffers">Open Offers</string>
    <string name="labelLostSale">Lost Sale</string>
    <string name="labelGeneral">General</string>
    <string name="labelActivity">Activity</string>
    <string name="labelTrades">Trades</string>
    <string name="labelnotes">Notes</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="blank"></string>
    <string name="CustomerNo">Customer No.</string>
    <string name="BonusIndex">Bonus-Index</string>
    <string name="TotalOP">Total-OP</string>
    <string name="Salesrunning">Sales running</string>
    <string name="SalesPreviousYear">Sales 2014</string>
    <string name="SalesLatest">Sales 2015</string>
    <string name="Months">12 Months</string>
    <string name="General">General</string>
    <string name="Contacts">Contacts</string>
    <string name="Matchcode">Matchcode</string>
    <string name="Name1">Name 1</string>
    <string name="Name2">Name 2</string>
    <string name="Name3">Name 3</string>
    <string name="Road">Road</string>
    <string name="degreeSymbol">\u00B0</string>

    <string name="checkbox1_text">Anlieferung</string>
    <string name="checkbox2_text">kann abgestellt werden</string>
    <string name="checkbox3_text">Lieferung moglich von</string>
    <string name="checkbox4_text">Voranmeldung erforderlich</string>
    <string name="checkbox5_text">Benachrichtgung an</string>
    <string name="checkbox6_text">Rampenanlieferung</string>
    <string name="checkbox7_text">Sonstige Hindemisse</string>
    <string name="checkbox8_text">Ladefahrzeug</string>
    <string name="checkbox9_text">Einweisung notwendig</string>
    <string name="checkbox10_text">Selbstfahrer</string>
    <string name="defaultText">Select</string>
    <string name="error_message">Please enter value</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: start customer calendar  -->
    <string name="Done">Done</string>
    <string name="Customized">Customized</string>
    <string name="Decorator">Decorator</string>
    <string name="Hebrew">Hebrew</string>
    <string name="Arabic">Arabic</string>
    <string name="CustomView">Custom View</string>
    <string name="Dialog">Dialog</string>
    <string name="DisplayOnly">DisplayOnly</string>
    <string name="Range">Range</string>
    <string name="Multi">Multi</string>
    <string name="Single">Single</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>

</resources>
