<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.mateco.integrAMobile.HomeActivity">

    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/icn_search"
        app:showAsAction="always"
        android:orderInCategory="100"
        android:title="@string/search">
    </item>

    <item
        android:id="@+id/actionBack"
        android:icon="@drawable/icn_left_arrow"
        android:title="@string/action_back"
        android:orderInCategory="100"
        app:showAsAction="always" />


    <item
        android:id="@+id/actionWrong"
        android:icon="@drawable/icn_delete"
        android:orderInCategory="100"
        android:title="@string/action_wrong"
        app:showAsAction="always" />


    <item
        android:id="@+id/actionRight"
        android:icon="@drawable/icn_done"
        android:orderInCategory="100"
        android:title="@string/action_right"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionAdd"
        android:icon="@drawable/icn_add_header"
        app:showAsAction="always"
        android:orderInCategory="100"
        android:title="@string/search">
    </item>

    <item
        android:id="@+id/actionEdit"
        android:icon="@drawable/icn_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionForward"
        android:icon="@drawable/icn_right_arrow_nike"
        android:title="@string/action_back"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <!--<item
        android:id="@+id/actionForwardSpace"
        android:title="@string/blank"
        android:icon="@drawable/icn_blank"
        android:orderInCategory="100"
        app:showAsAction="always" />-->

    <item
        android:id="@+id/actionRefresh"
        android:icon="@drawable/icn_refresh"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/actionSettings"
        android:icon="@drawable/icn_setting"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />
</menu>
